// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MessageBubble snapshots > renders a doctor text message 1`] = `
<div>
  <ul>
    <li
      class="group/message relative flex flex-col items-end"
      data-message-id="msg-001"
      role="listitem"
    >
      <div
        class="max-w-[80%] relative flex w-full justify-end self-end"
      >
        <div
          class="message-body w-max max-w-full whitespace-pre-wrap break-words px-2.5 pb-1 pt-1.5 text-[14.5px] leading-[1.35] shadow-sm rounded-2xl rounded-tr-md border border-blue-200 bg-blue-50 text-slate-900"
        >
          <span>
            Plan discussed — follow up in two weeks.
          </span>
          <span
            class="inline-flex items-center gap-0.5 float-right ml-2 mt-1 text-gray-500"
            data-testid="message-bubble-meta"
          >
            <time
              class="text-[11px] leading-none tabular-nums"
            >
              15:45
            </time>
            <span
              class="inline-flex"
              data-testid="message-delivery-ticks"
            >
              <span
                aria-label="Delivered"
                class="inline-flex shrink-0 text-gray-400"
                data-delivery="delivered"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check-check h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 7 17l-5-5"
                  />
                  <path
                    d="m22 10-7.5 7.5L13 16"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`MessageBubble snapshots > renders a failed-send bubble 1`] = `
<div>
  <ul>
    <li
      class="group/message relative flex flex-col items-end border-l-2 border-red-300 pl-2"
      data-failed="true"
      data-message-id="msg-failed"
      role="listitem"
    >
      <div
        class="max-w-[80%] relative flex w-full justify-end self-end"
      >
        <div
          class="message-body w-max max-w-full whitespace-pre-wrap break-words px-2.5 pb-1 pt-1.5 text-[14.5px] leading-[1.35] shadow-sm rounded-2xl rounded-tr-md border border-blue-200 bg-blue-50 text-slate-900"
        >
          <span>
            Message that failed to send.
          </span>
          <span
            class="inline-flex items-center gap-0.5 float-right ml-2 mt-1 text-gray-500"
            data-testid="message-bubble-meta"
          >
            <time
              class="text-[11px] leading-none tabular-nums"
            >
              15:45
            </time>
          </span>
        </div>
      </div>
      <div
        class="mt-1 flex items-center gap-2 text-xs text-red-700"
        data-failure-reason="unknown"
      >
        <span>
          Failed to send
        </span>
        <button
          class="underline hover:text-red-900 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-1"
          type="button"
        >
          Retry
        </button>
        <button
          class="underline hover:text-red-900 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-1"
          type="button"
        >
          Discard
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`MessageBubble snapshots > renders a patient text message 1`] = `
<div>
  <ul>
    <li
      class="group/message relative flex flex-col items-start"
      data-message-id="msg-patient"
      role="listitem"
    >
      <div
        class="max-w-[80%] relative flex w-full justify-start self-start"
      >
        <div
          class="message-body w-max max-w-full whitespace-pre-wrap break-words px-2.5 pb-1 pt-1.5 text-[14.5px] leading-[1.35] shadow-sm rounded-2xl rounded-tl-md bg-gray-100 text-gray-900"
        >
          <span>
            Thank you, doctor.
          </span>
          <span
            class="inline-flex items-center gap-0.5 float-right ml-2 mt-1 text-gray-500"
            data-testid="message-bubble-meta"
          >
            <time
              class="text-[11px] leading-none tabular-nums"
            >
              15:45
            </time>
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`MessageBubble snapshots > renders a reply with quoted parent preview 1`] = `
<div>
  <ul>
    <li
      class="group/message relative flex flex-col items-end"
      data-message-id="msg-reply"
      role="listitem"
    >
      <div
        class="max-w-[80%] relative flex w-full justify-end self-end"
      >
        <div
          class="message-body w-max max-w-full whitespace-pre-wrap break-words px-2.5 pb-1 pt-1.5 text-[14.5px] leading-[1.35] shadow-sm rounded-2xl rounded-tr-md border border-blue-200 bg-blue-50 text-slate-900"
        >
          <button
            aria-label="Jump to message from Doctor"
            class="mb-1.5 w-full min-w-0 rounded border-l-2 pl-2 pr-1 py-1 text-left text-xs border-blue-400 bg-white/70 text-gray-700 hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-1"
            type="button"
          >
            <div
              class="truncate font-medium"
            >
              Doctor
            </div>
            <div
              class="truncate opacity-90"
            >
              Take 5mg twice a day
            </div>
          </button>
          <span>
            Got it
          </span>
          <span
            class="inline-flex items-center gap-0.5 float-right ml-2 mt-1 text-gray-500"
            data-testid="message-bubble-meta"
          >
            <time
              class="text-[11px] leading-none tabular-nums"
            >
              15:45
            </time>
            <span
              class="inline-flex"
              data-testid="message-delivery-ticks"
            >
              <span
                aria-label="Delivered"
                class="inline-flex shrink-0 text-gray-400"
                data-delivery="delivered"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check-check h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 7 17l-5-5"
                  />
                  <path
                    d="m22 10-7.5 7.5L13 16"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`MessageBubble snapshots > renders a system message 1`] = `
<div>
  <ul>
    <li
      class="flex items-center justify-center"
    >
      <p
        class="inline-flex items-center gap-1.5 text-center text-xs italic text-gray-500"
        data-system-event="session_started"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <span>
          Consult started.
        </span>
      </p>
    </li>
  </ul>
</div>
`;

exports[`MessageBubble snapshots > renders an attachment message 1`] = `
<div>
  <ul>
    <li
      class="group/message relative flex flex-col items-end"
      data-message-id="msg-001"
      role="listitem"
    >
      <div
        class="max-w-[80%] relative flex w-full justify-end self-end"
      >
        <div
          class="message-body w-max max-w-full whitespace-pre-wrap break-words px-2.5 pb-1 pt-1.5 text-[14.5px] leading-[1.35] shadow-sm rounded-2xl rounded-tr-md border border-blue-200 bg-blue-50 text-slate-900"
        >
          <span>
            <span
              class="inline-flex items-center gap-1.5 text-gray-500"
            >
              <span
                aria-hidden="true"
              >
                📎
              </span>
              <span>
                Loading…
                 
                lab-report.pdf · 200.0 KB
              </span>
            </span>
          </span>
          <span
            class="inline-flex items-center gap-0.5 float-right ml-2 mt-1 text-gray-500"
            data-testid="message-bubble-meta"
          >
            <time
              class="text-[11px] leading-none tabular-nums"
            >
              15:45
            </time>
            <span
              class="inline-flex"
              data-testid="message-delivery-ticks"
            >
              <span
                aria-label="Delivered"
                class="inline-flex shrink-0 text-gray-400"
                data-delivery="delivered"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check-check h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 7 17l-5-5"
                  />
                  <path
                    d="m22 10-7.5 7.5L13 16"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`MessageBubble snapshots > renders in readonly mode without failed-send affordances 1`] = `
<div>
  <ul>
    <li
      class="group/message relative flex flex-col items-end"
      data-message-id="msg-001"
      role="listitem"
    >
      <div
        class="max-w-[80%] relative flex w-full justify-end self-end"
      >
        <div
          class="message-body w-max max-w-full whitespace-pre-wrap break-words px-2.5 pb-1 pt-1.5 text-[14.5px] leading-[1.35] shadow-sm rounded-2xl rounded-tr-md border border-blue-200 bg-blue-50 text-slate-900"
        >
          <span>
            Read-only history line.
          </span>
          <span
            class="inline-flex items-center gap-0.5 float-right ml-2 mt-1 text-gray-500"
            data-testid="message-bubble-meta"
          >
            <time
              class="text-[11px] leading-none tabular-nums"
            >
              15:45
            </time>
            <span
              class="inline-flex"
              data-testid="message-delivery-ticks"
            >
              <span
                aria-label="Read"
                class="inline-flex shrink-0 text-blue-600"
                data-delivery="read"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check-check h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 7 17l-5-5"
                  />
                  <path
                    d="m22 10-7.5 7.5L13 16"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
